assets/css/style.css
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: rgb(60, 60, 60);
}

header {
    font-size: 160%;
    text-align: center;
    color: rgb(230, 150, 0);
    margin-top: 25px;
    margin-bottom: 25px;
}

/* Header image */
#header-image {
    text-align: center;
    background-color: #333;
}

#header-image img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

/*Highlighting for important text and link*/
#highlight {
    text-decoration-line: underline;
    font-weight: bold;
    font-size: 110%;
    color: white;
}

.background-color {
    background-color: #333;
}

/* Navigation */
.nav-container {
    display: flex;
    justify-content: center;
}

.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 50px;
}

.nav-link {
    text-decoration: none;
    color: rgb(230, 150, 0);
    border-bottom: 2px solid white;
    font-size: 230%;
    margin: 0 50px;
}

#active {
    border-bottom: 2px solid red;
}

/*Section rules*/
section {
    margin-top: 25px;
    margin-left: 7.5%;
    margin-right: 7.5%;
    height: 1600px;
}

hr{
    border-bottom: 4px solid black;
}

h2 {
    font-size: 40px;
    color: rgb(230, 150, 0);
}

section p {
    font-size: 20px;
    color: white;
    padding-top: 20px;
}

/*Spacing for the boss list*/
.spacing {
    height: 500px;
    background-color: #333;
}

.left-align {
    float: left;
    text-align: left;
    width: 45%;
    background-color: #333;
}

.right-align {
    float: right;
    text-align: right;
    width: 45%;
    background-color: #333;
}

/*Footer*/
footer {
    width: 100%;
    height: 50px;
    background-color: #333;
    padding: 20px;
    text-align: center;
    margin-top: 100px;
}

.social-links a {
    display: inline-block;
    margin: 0 5%;
    color: #fff;
    font-size: 40px;
}

/*Interactive map*/
.interactive-window {
    width: 100%;
    height: 600px;
    position: relative;
    overflow: hidden;
}

.interactive-window iframe {
    width: 100%;
    height: 100%;
    border: none;
}

/* Paragraph and image styling for bosses list*/
.character-description {
    width: 50%;
    float: left;
    margin-right: 20px;
}

.character-image {
    float: right;
    width: 40%;
    margin-left: 20px;
}

.character-image img {
    padding-top: 50px;
    width: 550px;
    height: auto;
}

/*Stops the text from the section covering the footer and social links on smaller screens*/
@media (max-width: 1100px) {
    section {
        overflow-y: auto;
        padding-bottom: 50px;
    }
}
/*Stops the text from the boss divs leaving their assigned box*/
@media (max-width: 1300px) {
    .spacing {
        overflow-y: auto;
        padding-bottom: 50px;
    }
}
/*Makes the nav stack on top of eachover instead of side by side on smaller screens*/
@media (max-width: 768px) {
    .nav {
        flex-direction: column;
        align-items: center;
        padding: 20px;
    }

    .nav-link {
        margin: 10px 0;
    }
}

